Add author meta data and fix a few typos.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version       = "0.1.0"
 edition       = "2021"
 description   = "Low latency inter-thread communication via a ringbuffer (inspired by LMAX Disruptor)."
 license       = "MIT"
+authors       = ["Nicholas <nicholassm@gmail.com>"]
 documentation = "https://docs.rs/disruptor"
 repository    = "https://github.com/nicholassm/disruptor-rs"
 categories    = ["data-structures", "concurrency"]
