Improves documentation and simplifies SPSC implementation.
- Consumer doesn't have to load sequence number from the consumer
  barrier. It can just track it in local variable.
- SingleBarrier simplified.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name          = "disruptor"
 version       = "0.1.0"
 edition       = "2021"
-description   = "Low latency inter-thread communication via a ringbuffer (inspired by LMAX Disruptor)."
+description   = "Low latency inter-thread communication via a ringbuffer (inspired by the LMAX Disruptor)."
 license       = "MIT"
 authors       = ["Nicholas <nicholassm@gmail.com>"]
 repository    = "https://github.com/nicholassm/disruptor-rs"
