--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,11 @@ keywords      = ["disruptor", "ringbuffer"]
 [dependencies]
 crossbeam-utils = "0.8"
 core_affinity   = "0.8.0"
+
+[dev-dependencies]
+criterion = "0.5"
+crossbeam = "0.8"
+
+[[bench]]
+name = "spsc"
+harness = false
