--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ keywords      = ["disruptor", "ringbuffer", "message", "mpmc"]
 [dependencies]
 crossbeam-utils = "0.8"
 core_affinity   = "0.8.1"
+thiserror       = "1.0"
 
 [dev-dependencies]
 criterion = "0.5"
