Minor doc improvement and added one test of initial state of multi producer barrier.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,10 @@ name = "mpsc"
 harness = false
 
 [[bench]]
+name = "mpsc_contention"
+harness = false
+
+[[bench]]
 name = "poller"
 harness = false
 
